cache_hq/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: cachet-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: cachethq
---
# deploy cachethq  with 2 replicas
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cachethq
  labels:
    app: cachethq
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cachethq
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: cachethq
        tier: frontend
    spec:
      containers:
      - image: cachethq/docker:latest
        name: cachethq
        ports:
        - containerPort: 8000
          name: cachethq
