cache_hq/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/configuration-snippet: |
      if ($http_x_forwarded_proto != 'https') {
        rewrite ^(.*) https://$host$1 redirect;
      }
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
  name: app-ingress
spec:
  rules:
  - host: domain.com
    http:
      paths:
      - backend:
          serviceName: cachet-svc
          servicePort: 80
        path: /
